--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
       <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
       <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a target="_blank" href="https://github.com/shrutigoyal04" class="github"><i class="bi bi-github"></i></a>
+      <a target="_blank" href="https://www.linkedin.com/in/shruti-goyal-897611273/" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
